force-app/main/default/objects/Ops_Incident_AI_Config__mdt/Ops_Incident_AI_Config__mdt.object-meta.xml
<CustomObject>
    <description>AI provider settings for UAT Feedback Slack suggestions.</description>
    <label>Ops Incident AI Config</label>
    <pluralLabel>Ops Incident AI Configs</pluralLabel>
</CustomObject>