force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLM Enabled</label>
    <type>Checkbox</type>
</CustomField>