force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Max_Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Output_Tokens__c</fullName>
    <label>Max Output Tokens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>