force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>