force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Named_Credential_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Api_Name__c</fullName>
    <label>Named Credential Api Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>