force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthropic_Messages</fullName>
                <default>true</default>
                <label>Anthropic Messages</label>
            </value>
            <value>
                <fullName>OpenAI_Chat</fullName>
                <label>OpenAI Chat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>