force-app/main/default/objects/Ops_Incident_AI_Config__mdt/fields/Relative_Api_Path__c.field-meta.xml
<CustomField>
    <fullName>Relative_Api_Path__c</fullName>
    <label>Relative Api Path</label>
    <length>120</length>
    <type>Text</type>
</CustomField>